[package]
name = "ecr-gitconfig"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.3.0", features = ["behavior-version-latest"] }
aws-sdk-codecommit = { version = "1.22.0", features = ["behavior-version-latest"] }
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
git2 = "0.18.3"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true
codegen-units = 1
